# igloo-ansible-playbooks

./: .gitignore  README.rst
clickable_igloo/: pyproject.toml
clickable_igloo/clickable_igloo/: __init__.py
inventory/group_vars/all/: 00-igloo-private.yml  00-igloo.yml  01-igloo-extra.yml  01-igloo-minimal.yml
inventory/group_vars/debian/: 00-igloo-debian.yml
inventory/group_vars/ubuntu/: 00-igloo-ubuntu.yml
inventory/group_vars/vagrant/: 00-igloo-vagrant.yml
playbooks/: symlink-igloo-ansible-playbooks.yml
playbooks/igloo-playbooks/: full.yml  restore.yml
playbooks/igloo-playbooks/include/: ansible-prepare.yml  application.yml  build.yml  common.yml  debug.yml  gitlab-cd.yml  network.yml  stack.yml  vagrant.yml
